--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,10 @@ timezone: Asia/Tokyo
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://eiichi-worker.github.io/blog/
-root: /blog/
+# url: https://eiichi-worker.github.io/blog/
+# root: /blog/
+url: http://blog.noraneko.work
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
