--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,10 @@ time_format: HH:mm:ss
 per_page: 10
 pagination_dir: page
 
+sitemap:
+  path: sitemap.xml
+  template: ./sitemap_template.xml
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
