--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "hexo deploy -g"
   },
   "dependencies": {
-    "hexo": "3.3.*",
+    "hexo": "^3.3.9",
     "hexo-deployer-git": "^0.3.*",
     "hexo-generator-archive": "^0.1.*",
     "hexo-generator-category": "^0.1.*",
