--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "hexo deploy -g"
   },
   "dependencies": {
-    "hexo": "^3.3.9",
+    "hexo": "^3.5.*",
     "hexo-deployer-git": "^0.3.*",
     "hexo-generator-archive": "^0.1.*",
     "hexo-generator-category": "^0.1.*",
@@ -21,6 +21,6 @@
     "hexo-renderer-ejs": "^0.3.*",
     "hexo-renderer-marked": "^0.3.*",
     "hexo-renderer-stylus": "^0.3.*",
-    "hexo-server": "^0.2.*"
+    "hexo-server": "^0.3.*"
   }
 }
