--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "hexo": "^3.5.*",
     "hexo-deployer-git": "^0.3.*",
+    "hexo-generator-amp": "^3.0.*",
     "hexo-generator-archive": "^0.1.*",
     "hexo-generator-category": "^0.1.*",
     "hexo-generator-feed": "^1.2.*",
