--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Tokyo
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 # url: https://eiichi-worker.github.io/blog/
 # root: /blog/
-url: http://blog.noraneko.work
+url: https://blog.noraneko.work
 root: /
 # permalink: :year/:month/:day/:title/
 permalink: :title/
