--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "hexo": "^3.7.1",
+    "hexo-auto-canonical": "^0.1.1",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-amp": "^3.0.15",
     "hexo-generator-archive": "^0.1.5",
